# langchain-assistant

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  app.py  main.py  pyproject.toml  scraper.py  scraper_new.py
bash/: execute_linters.sh
langchain-docs/docs/concepts/: index.html
langchain-docs/docs/concepts/agents/: index.html
langchain-docs/docs/concepts/architecture/: index.html
langchain-docs/docs/concepts/async/: index.html
langchain-docs/docs/concepts/callbacks/: index.html
langchain-docs/docs/concepts/chat_history/: index.html
langchain-docs/docs/concepts/chat_models/: index.html
langchain-docs/docs/concepts/document_loaders/: index.html
langchain-docs/docs/concepts/embedding_models/: index.html
langchain-docs/docs/concepts/evaluation/: index.html
langchain-docs/docs/concepts/example_selectors/: index.html
langchain-docs/docs/concepts/few_shot_prompting/: index.html
langchain-docs/docs/concepts/key_value_stores/: index.html
langchain-docs/docs/concepts/lcel/: index.html
langchain-docs/docs/concepts/messages/: index.html
langchain-docs/docs/concepts/multimodality/: index.html
langchain-docs/docs/concepts/output_parsers/: index.html
langchain-docs/docs/concepts/prompt_templates/: index.html
langchain-docs/docs/how_to/: index.html
langchain-docs/docs/tutorials/: index.html
src/: ingestion.py  ingestion_firecrawl.py  logging.py
src/backend/: __init__.py  core.py
src/ingestion/: __init__.py  ingestion.py
src/scraping/: __init__.py  scraper_api.py  scraper_docs.py
(+171 files in other folders)
